--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Roboto+Serif:opsz,wght@8..144,300&family=Roboto+Slab:wght@200&family=Roboto:wght@100&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css">
 
-  <title>MAGUIX | Inicio</title>
-  <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1045912906425958410/1045916183318237215/image.png"/>
+  <title>MAGIX | Inicio</title>
+  <link rel="icon" type="image/png" href="https://img.icons8.com/external-others-inmotus-design/67/22C3E6/external-M-round-latin-keyboard-others-inmotus-design-2.png"/>
 
 </head>
 <body>
@@ -26,13 +26,13 @@
           <ul class="nav-menu">
             <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#Inicio">catalogo1</a>
             </li>
-            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#Programacion">Catalogo2</a>
+            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#parte1">Catalogo2</a>
             </li>
-            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#Discord">Catslogo3</a>
+            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#parte2">Catalogo3</a>
             </li>
-            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#Twitch">Catalogo4</a>
+            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#parte3">Catalogo4</a>
             </li>
-            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#Juegos">Catalogo5</a>
+            <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#parte4">Catalogo5</a>
             </li>
           </ul> 
 
@@ -53,28 +53,42 @@
       <div class="catalogo1">
       <div class="caja caja1">
         <img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px">
-        <p>Quita Polvo</p>
-        <p>Precio</p> <p>$123.00</p>
+        <p>Quita Polvo</p> <p>Precio: $123.00</p>
+        <div class="PedirProducto">
+          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
         </div>
+      </div>
       <div class="caja caja2">
         <img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px">
         <p>Quita Polvo</p>
-        <p>Precio</p> <p>$123.00</p>
+        <p>Precio: $123.00</p>
+        <div class="PedirProducto">
+          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+        </div>
       </div>
       <div class="caja caja3">
         <img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px">
         <p>Quita Polvo</p>
-        <p>Precio</p> <p>$123.00</p>
+        <p>Precio: $123.00</p>
+        <div class="PedirProducto">
+          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+        </div>
       </div>
       <div class="caja caja4">
         <img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px">
         <p>Quita Polvo</p>
-        <p>Precio</p> <p>$123.00</p>
+        <p>Precio: $123.00</p>
+        <div class="PedirProducto">
+          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+        </div>
       </div>
       <div class="caja caja5">
         <img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px">
         <p>Quita Polvo</p>
-        <p>Precio</p> <p>$123.00</p>
+        <p>Precio: $123.00</p>
+        <div class="PedirProducto">
+          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+        </div>
       </div>
     </div>
     <br>
@@ -113,10 +127,10 @@
         <div class="cajafooter">
           <h2>Nuestras Redes</h2>
           <div class="redsocial">
-            <a target="_blank" href="https://"><img src="" alt="logo" width="20px" height="20px"/></a>
-            <a target="_blank" href="https://"><img src="" alt="logo" width="20px" height="20px"/></a>
-            <a target="_blank" href="https://"><img src="" alt="logo" width="20px" height="20px"></a>
-            <a target="_blank" href="https://"><img src="" alt="logo" width="20px" height="20px"></a>
+            <a class="IconoRed" target="_blank" href="https://"><img src="https://img.icons8.com/material/24/FFFFFF/facebook-messenger--v1.png" alt="Facebook Messenger" width="25px" height="25px" align="center"/></a>
+            <a class="IconoRed" target="_blank" href="https://"><img src="https://img.icons8.com/material/24/FFFFFF/whatsapp--v1.png" alt="logo" width="25px" height="25px" align="center"/></a>
+            <a class="IconoRed" target="_blank" href="https://"><img src="https://img.icons8.com/material/24/FFFFFF/instagram-new--v1.png" alt="logo" width="25px" height="25px" align="center"/></a>
+            <a class="IconoRed" target="_blank" href="https://"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/circled-envelope.png" alt="Correo" width="25px" height="25px" align="center"/></a>
           </div>
         </div>
       </div>
@@ -126,13 +140,7 @@
   
     </footer>
   
-    <script src="code.js">
-      
-window.addEventListener("scroll", function(){
-  var header = document.querySelector("header");
-  header.classList.toggle("abajo", window.scrollY>0);
-})
-    </script>
+    <script src="code.js"></script>
   </div>
 </body>
 </html>
