--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       <p>Internacionales</p></strong>
     </div> <br>
 
-    <h2 class="Presentacion" align="center">Nuestros clientes merecen</h2>
+    <h2 class="Presentacion" align="center">Ofrecemos</h2>
     <div class="Cuadros">
       <div class="Cuadro cuadro1">
-        <h3>Importancia</h3>
+        <h3>Prioridad</h3>
       </div>
       <div class="Cuadro cuadro2">
         <h3>Mejores Precios</h3>
