--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="encabezado-img">
       <h2><strong>M a g i x</strong></h2>
-      <h4>Tienda online con la mejor calidad <h4>
+      <h4>Tienda Online<h4>
       <strong>
       <p>Ventas en CDMX</p>
       <p>Nacionales e </p>
