--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
     <h2 class="Presentacion" align="center">Ofrecemos</h2>
     <div class="Cuadros">
       <div class="Cuadro cuadro1">
-        <h3>Prioridad</h3>
-      </div>
-      <div class="Cuadro cuadro2">
         <h3>Mejores Precios</h3>
       </div>
+      <div class="Cuadro cuadro2">
+        <h3>Mejor Calidad</h3>
+      </div>
       <div class="Cuadro cuadro3">
-        <h3>Mejor Atencion</h3>
+        <h3>?</h3>
       </div>
       <div class="Cuadro cuadro4">
-        <h3>Mejores Entregas</h3>
+        <h3>Rapidez</h3>
       </div>
       <div class="Cuadro cuadro4" align="center">
-        <h3>Mejor Calidad</h3>
+        <h3>Mejor Atencion</h3>
       </div>
     </div>
 
