--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
       <div class="catalogo1">
       <div class="caja caja1T">
         <a href="https://cutt.ly/h1PcJIe" target="_blank" rel="Rasuradora Dragon"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1047943405801582623/MagixRasuradoraDragon.jpg" height="300px" width="300px"></a>
-        <p>Rasuradora Trimmer Recargable De - Dragon</p>
+        <p>Rasuradora Trimmer Recargable De Metal - Dragon</p>
         <div class="Precio">
           <h3>$155.00</h3>
         </div>
         <div class="MasCaro">
-          <small><p><del>$224.99</del></p></small>
+          <small><p><del>$209.00</del></p></small>
         </div>
         <div class="PedirProducto">
-          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20la%20Rasuradora%20Trimmer%20Recargable%20De%20-%20Dragon%20https://cutt.ly/s1PjUZs" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20la%20Rasuradora%20Trimmer%20Recargable%20De%20Metal%20-%20Dragon%20https://cutt.ly/G1PCZnn" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
         </div>
       </div>
       <div class="caja caja2T">
@@ -145,29 +145,29 @@
       <hr>
       <div class="catalogo1">
       <div class="caja caja1R">
-        <a href="https://cutt.ly/h1PcJIe" target="_blank" rel="Rasuradora Dragon"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1047943405801582623/MagixRasuradoraDragon.jpg" height="300px" width="300px"></a>
-        <p>Rasuradora Trimmer Recargable De - Dragon</p>
+        <a href="https://cdn.discordapp.com/attachments/1045912906425958410/1047943405801582623/MagixRasuradoraDragon.jpg" target="_blank" rel="Rasuradora Dragon"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1047943405801582623/MagixRasuradoraDragon.jpg" height="300px" width="300px"></a>
+        <p>Rasuradora Trimmer Recargable De Metal - Dragon</p>
         <div class="Precio">
           <h3>$155.00</h3>
         </div>
         <div class="MasCaro">
-          <small><p><del>$224.99</del></p></small>
+          <small><p><del>$209.99</del></p></small>
         </div>
         <div class="PedirProducto">
-          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20la%20Rasuradora%20Trimmer%20Recargable%20De%20-%20Dragon%20https://cutt.ly/s1PjUZs" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20la%20Rasuradora%20Trimmer%20Recargable%20De%20Metal%20-%20Dragon%20https://cutt.ly/G1PCZnn" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
         </div>
       </div>
       <div class="caja caja2R">
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px"></a>
-        <p>Quita Polvo</p>
+        <a href="https://cdn.discordapp.com/attachments/1045912906425958410/1047956462258896967/MagixRasuradoraTitanio.jpg" target="_blank" rel="Rasuradora Titanio"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1047956462258896967/MagixRasuradoraTitanio.jpg" height="300px" width="300px"></a>
+        <p>Rasuradora Trimmer Profesional De Metal - Titanio</p>
         <div class="Precio">
-          <h3>$0.00</h3>
+          <h3>$249.00</h3>
         </div>
         <div class="MasCaro">
-          <small><p><del>$0.00</del></p></small>
+          <small><p><del>$299.00</del></p></small>
         </div>
         <div class="PedirProducto">
-          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20la%20Rasuradora%20Trimmer%20Profesional%20de%20Metal%20-%20Titanio%20https://cutt.ly/j1PYlP5" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
         </div>
       </div>
       <div class="caja caj3R">
@@ -325,29 +325,29 @@
       <hr>
       <div class="catalogo1">
       <div class="caja caja1Aros">
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px"></a>
-        <p>Quita Polvo</p>
+        <a href="https://cdn.discordapp.com/attachments/1045912906425958410/1047987109388111942/LamparaProfesionalAplicacionDeBelleza.jpg" target="_blank" rel="Lampara Profesional Aplicacion De Belleza"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1047987109388111942/LamparaProfesionalAplicacionDeBelleza.jpg" height="300px" width="300px"></a>
+        <p>Lampara Profesional - Aplicacion De Belleza</p>
         <div class="Precio">
-          <h3>$0.00</h3>
+          <h3>$189.00</h3>
         </div>
         <div class="MasCaro">
-          <small><p><del>$0.00</del></p></small>
+          <small><p><del>$245.00</del></p></small>
         </div>
         <div class="PedirProducto">
-          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20la%20Lampara%20Profesional%20-%20Aplicaciones%20De%20Belleza%20https://cutt.ly/P1PCQ3R" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
         </div>
       </div>
       <div class="caja caja2Aros">
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1046311075588603964/QuitaPolvo2ConLogoMagix.jpg" height="300px" width="300px"></a>
-        <p>Quita Polvo</p>
+        <a href="https://cdn.discordapp.com/attachments/1045912906425958410/1047995888557113435/AroLuzLedProfesional18Control3Tonos.jpg" target="_blank" rel="Aro De Luz Led Profesional 18 Pulgadas Control 3 Tonos"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1047995888557113435/AroLuzLedProfesional18Control3Tonos.jpg" height="300px" width="300px"></a>
+        <p>Aro De Luz Led Profesional 18 Pulgadas Control 3 Tonos</p>
         <div class="Precio">
-          <h3>$0.00</h3>
+          <h3>$799.00</h3>
         </div>
         <div class="MasCaro">
-          <small><p><del>$0.00</del></p></small>
+          <small><p><del>$1,099.00</del></p></small>
         </div>
         <div class="PedirProducto">
-          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20el%20Aro%20De%20Luz%20Led%20Profesional%2018%20pulgadas%20Control%203%20Tonos%20https://cutt.ly/c1PMKbE" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
         </div>
       </div>
       <div class="caja caja3Aros">
