--- a/index.html
+++ b/index.html
@@ -210,16 +210,16 @@
         </div>
       </div>
       <div class="caja caja6R">
-        <a href="http://" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1048016324409970698/icons8-dots-loading.gif" height="300px" width="300px"></a>
-        <p>Proximamente</p>
+        <a href="https://cdn.discordapp.com/attachments/1045912906425958410/1048022837207773204/MagixDepiladorParaMujer.jpg" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1048022837207773204/MagixDepiladorParaMujer.jpg" height="300px" width="300px"></a>
+        <p>Depilador Recargable Para Mujer</p>
         <div class="Precio">
-          <h3>$0.00</h3>
+          <h3>$99.00</h3>
         </div>
         <div class="MasCaro">
-          <small><p><del>$0.00</del></p></small>
+          <small><p><del>$149.00</del></p></small>
         </div>
         <div class="PedirProducto">
-          <a class="Pedirenlace" href="https://" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
+          <a class="Pedirenlace" href="https://api.whatsapp.com/send?phone=525559975635&text=Hola,%20me%20interesa%20el%20Depilador%20Recargable%20Para%20Mujer%20https://cutt.ly/t1AwbTZ" target="_blank" rel="Pedir info"><p class="Pedirtexto">Me interesa</p></a>
         </div>
       </div>
       <div class="caja caja7R">
