--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
             </li>
             <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="#Hogar">Hogar</a></li>
           </ul> 
-
         </nav>
-
       </header>
     </div>
 
@@ -69,6 +67,7 @@
         <h3>Mejor Atencion</h3>
       </div>
     </div>
+    <br>
 
       <div class="Titulo"><h1 align="center">TOP 5</h1></div>
       <hr>
@@ -185,7 +184,7 @@
       </div>
       <div class="caja caja4R">
         <a href="https://cdn.discordapp.com/attachments/1045912906425958410/1048006297859133460/MagixRasuradoraProfesionalAlambrica.jpg" target="_blank" rel="noopener noreferrer"><img src="https://cdn.discordapp.com/attachments/1045912906425958410/1048006297859133460/MagixRasuradoraProfesionalAlambrica.jpg" height="300px" width="300px"></a>
-        <p>Rasurdora Profesional - Alambrica Roja/Negra</p>
+        <p>Rasuradora Profesional - Alambrica Roja/Negra</p>
         <div class="Precio">
           <h3>$199.00</h3>
         </div>
@@ -249,6 +248,7 @@
         </div>
       </div>
     </div>
+    <br>
 
     <div class="Titulo"><a name="Cabello"><h1 align="center">CABELLO</h1></a></div>
       <hr>
