--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       <p>_</p>
       <strong><p>Ventas</p>
       <p>CDMX/Nacionales</p></strong>
-    </div> <br>
+    </div>
+    <br>
 
     <h2 class="Presentacion" align="center">Ofrecemos</h2>
     <div class="Cuadros">
