--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Roboto+Serif:opsz,wght@8..144,300&family=Roboto+Slab:wght@200&family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Philosopher:wght@700&family=Roboto+Serif:opsz,wght@8..144,300&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
   <link href="style.css" rel="stylesheet" type="text/css">
 
   <title>MAGIX | Inicio</title>
@@ -464,7 +465,7 @@
     </div>
     <br>
 
-    <div class="Titulo"><a name="Pestañas"><h1 align="center">Pestañas</h1></a></div>
+    <div class="Titulo"><a name="Pestañas"><h1 align="center">PESTAÑAS</h1></a></div>
       <hr>
       <div class="catalogo1">
       <div class="caja caja1P">
@@ -535,7 +536,7 @@
     </div>
     <br>
 
-    <div class="Titulo"><a name="Cejas"><h1 align="center">Cejas</h1></a></div>
+    <div class="Titulo"><a name="Cejas"><h1 align="center">CEJAS</h1></a></div>
       <hr>
       <div class="catalogo1">
       <div class="caja caja1Cejas">
@@ -606,7 +607,7 @@
     </div>
     <br>
 
-    <div class="Titulo"><a name="Hogar"><h1 align="center">Hogar</h1></a></div>
+    <div class="Titulo"><a name="Hogar"><h1 align="center">HOGAR</h1></a></div>
       <hr>
       <div class="catalogo1">
       <div class="caja caja1h">
